--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>core</module>
         <module>discovery</module>
         <module>gateway</module>
+        <module>auth</module>
     </modules>
 
     <dependencies>
